<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollTableSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_texture_small" >

	<LinearLayout
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:orientation="vertical" >
	
			<TextView
		        android:id="@+id/txt4"
		        style="@style/text_header"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|center"
		        android:layout_marginTop="10dp"
		        android:text="@string/txtTableCalculations" />
		
			<CheckBox
		        android:id="@+id/cckBxTableVisibility_Velocity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow1"
		        style="@style/text_info" />
	
		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_Deviation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow2"
		        style="@style/text_info" />

  		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_Vp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow3"
		        style="@style/text_info" />
	
		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_Accelerations"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow4"
		        style="@style/text_info" />
	
		   <CheckBox
		        android:id="@+id/cckBxTableVisibility_MainVelocity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow5"
		        style="@style/text_info" />
	
		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_MAX"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow6"
		        style="@style/text_info" />
	    	    
		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_Rfunction"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow7"
		        style="@style/text_info" />
	
		    <CheckBox
		        android:id="@+id/cckBxTableVisibility_Energy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tableRow8"
		        style="@style/text_info" />

		    <RelativeLayout
		       	android:layout_height="wrap_content"
				android:layout_width="fill_parent"
       			android:orientation="horizontal" >
       			
       			 <TextView
	                 android:id="@+id/txtStepForTable"
	                 style="@style/text_ammo"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/txtTableStep" />

       			 <EditText
       			     android:id="@+id/editTxtStepFOrTable"
       			     style="@style/edit_standart"
       			     android:layout_width="120dp"
       			     android:layout_height="45dp"
       			     android:layout_marginRight="10dp"
       			     android:background="@layout/edit_text"
       			     android:layout_alignParentRight="true"/>

	        </RelativeLayout>
       
		    <Button
		        android:id="@+id/btnSaveAndClose"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|center"
		        android:layout_marginTop="10dp"
		        android:text="@string/btnCalculate"
		        android:background="@layout/button_custom"
		        style="@style/button_text" />
		    
	    </LinearLayout>
</ScrollView>