<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_texture_small"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/headerOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/option"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/OliveDrab" />

        <Button
            android:id="@+id/btnNewGameStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/newGame"
            android:background="@layout/button_custom"
            style="@style/button_text" />
    </RelativeLayout>
    
    <View
        android:id="@+id/line0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/bluelight" />
    
    <RelativeLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <CheckBox
          android:id="@+id/chkBxSoundSwitch"
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:checked="true"
          android:layout_marginTop="10dp"
          android:gravity="center|center_vertical|center_horizontal"
          android:text="@string/soundSwitch"
          android:textColor="@color/OliveDrab"
          style="@style/checkbox_style" />
    </RelativeLayout>
    
    <!-- line -->
     
    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/bluelight" />
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
 	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        	<RadioButton
		       android:id="@+id/rdB_eng"
		       android:layout_width="50dp"
			   android:layout_height="50dp"
			   android:layout_marginTop="5dp"
			   android:layout_marginLeft="5dp"
			   android:scaleType="fitXY"
			   android:checked="true"
			   android:button="@layout/button_radio_custom"/>
	    	<TextView
               android:id="@+id/rdB_eng_text"
               style="@style/text_ammo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/English"/>
       	</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton
		       android:id="@+id/rdB_ru"
		       android:layout_width="50dp"
			   android:layout_height="50dp"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="50dp"
		       android:scaleType="fitXY"
		       android:button="@layout/button_radio_custom"/>
            <TextView
               android:id="@+id/rdB_ru_text"
               style="@style/text_ammo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Russian"/>
       	</LinearLayout>
    </LinearLayout>
    
    <!-- line -->
    <View
         android:id="@+id/line2"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:background="@color/bluelight" />
</LinearLayout>
